# docs/swagger.json
@@ -15,6 +15,43 @@
     "host": "localhost:50000",
     "basePath": "/",
     "paths": {
+        "/v1/auth/cache/invalidate/{userUID}": {
+            "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Invalidates cached auth status for selected user UID.",
+                "tags": [
+                    "Security"
+                ],
+                "summary": "Invalidate user status cache",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "User UID",
+                        "name": "userUID",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "500": {
+                        "description": "Internal server error"
+                    }
+                }
+            }
+        },
         "/v1/authenticate": {
             "post": {
                 "description": "Authenticates user using username and password and returns user info with access token.",
